# transducer

./: LICENSE.txt  readme.md
projects/CMake/: CMakeLists.txt
src/ducer/: ducer.h  ducer_arities.h  ducer_compose.h  ducer_filterer.h  ducer_into.h  ducer_mapper.h  ducer_pass.h  ducer_println.h  ducer_summer.h  ducer_taker.h  ducer_transduce.h
test/: gist.cpp  test.cpp
